Fix overflow-x

--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,7 @@
 }
 
 body {
+	overflow-x: hidden;
 	min-height: 100vh;
 	margin: 0;
 	background-color: var(--primary-color);
